--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-server": "^2.16.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.3.4",
     "sqlite3": "^5.0.0"
   },
