setup react and implement register and login route

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.js --ignore client/",
     "start": "node server.js"
   },
   "keywords": [],
