--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "bcryptjs": "^2.4.3",
     "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
-    "sequelize": "^6.3.4",
-    "sqlite3": "^5.0.0"
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
